packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/valid/merge-multiple-files/upgrade-object-type/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if upgrading of an object type works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:cs" fuzzy-matching="none" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <!-- No changes, only a version increment. -->
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="2" compress="true" data-type="string:10:cs" fuzzy-matching="none" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <objecttype name="a" description="changed-description" display-name-singular="a" display-name-plural="a" version="3" compress="true" data-type="string:10:cs" fuzzy-matching="none" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <objecttype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="a" version="4" compress="true" data-type="string:10:cs" fuzzy-matching="none" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <objecttype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="5" compress="true" data-type="string:10:cs" fuzzy-matching="none" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <objecttype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="6" compress="false" data-type="string:10:cs" fuzzy-matching="none" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <objecttype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="7" compress="false" data-type="string:10:cs" fuzzy-matching="phonetic" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <objecttype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="8" compress="false" data-type="string:10:cs" fuzzy-matching="phonetic" regexp="[a-z]|[A-Z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
